--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+        "doctrine/dbal": "^3.1",
+        "catfan/medoo": "^2.0"
     },
     "autoload": {
         "psr-4": {"App\\":"App/"}
     }
 }
- 
